# DawnNN

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
examples/: CMakeLists.txt
examples/js/: package-lock.json  package.json  tsconfig.json
examples/js/public/: conv_0_b.json  conv_0_w.json
examples/js/src/: conv2d.ts  main.ts
examples/native/: conv_0.layer.hpp  onnx.cpp
include/dawnnn/: Layer.h
src/: CMakeLists.txt  Layer.cpp
